@@ -18,12 +18,15 @@ import org.prebid.server.auction.ImplicitParametersExtractor;
 import org.prebid.server.auction.IpAddressHelper;
 import org.prebid.server.auction.PriceGranularity;
 import org.prebid.server.auction.TimeoutResolver;
+import org.prebid.server.auction.model.Endpoint;
 import org.prebid.server.auction.model.IpAddress;
+import org.prebid.server.auction.model.Tuple2;
 import org.prebid.server.exception.BlacklistedAppException;
 import org.prebid.server.exception.InvalidRequestException;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.identity.IdGenerator;
 import org.prebid.server.json.JacksonMapper;
+import org.prebid.server.json.JsonMerger;
 import org.prebid.server.model.CaseInsensitiveMultiMap;
 import org.prebid.server.model.HttpRequestContext;
 import org.prebid.server.proto.openrtb.ext.request.ExtDevice;
@@ -38,30 +41,30 @@ import org.prebid.server.proto.openrtb.ext.request.ExtRequestTargeting;
 import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.util.HttpUtil;
+import org.prebid.server.util.ObjectUtil;
 import org.prebid.server.util.StreamUtil;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Currency;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class Ortb2ImplicitParametersResolver {
 
     private static final Logger logger = LoggerFactory.getLogger(Ortb2ImplicitParametersResolver.class);
 
-    private static final String WEB_CHANNEL = "web";
-    private static final String APP_CHANNEL = "app";
+    public static final String WEB_CHANNEL = "web";
+    public static final String APP_CHANNEL = "app";
+    public static final String AMP_CHANNEL = "amp";
 
     private static final String PREBID_EXT = "prebid";
     private static final String BIDDER_EXT = "bidder";
 
-    private static final Set<String> IMP_EXT_NON_BIDDER_FIELDS = Collections.unmodifiableSet(new HashSet<>(
-            Arrays.asList(PREBID_EXT, "context", "all", "general", "skadn", "data")));
+    private static final Set<String> IMP_EXT_NON_BIDDER_FIELDS =
+            Set.of(PREBID_EXT, "context", "all", "general", "skadn", "data", "gpid");
 
     private final boolean shouldCacheOnlyWinningBids;
     private final String adServerCurrency;
@@ -69,6 +72,7 @@ public class Ortb2ImplicitParametersResolver {
     private final ImplicitParametersExtractor paramsExtractor;
     private final IpAddressHelper ipAddressHelper;
     private final IdGenerator sourceIdGenerator;
+    private final JsonMerger jsonMerger;
     private final JacksonMapper mapper;
 
     public Ortb2ImplicitParametersResolver(boolean shouldCacheOnlyWinningBids,
@@ -77,6 +81,7 @@ public class Ortb2ImplicitParametersResolver {
                                            ImplicitParametersExtractor paramsExtractor,
                                            IpAddressHelper ipAddressHelper,
                                            IdGenerator sourceIdGenerator,
+                                           JsonMerger jsonMerger,
                                            JacksonMapper mapper) {
 
         this.shouldCacheOnlyWinningBids = shouldCacheOnlyWinningBids;
@@ -85,6 +90,7 @@ public class Ortb2ImplicitParametersResolver {
         this.paramsExtractor = Objects.requireNonNull(paramsExtractor);
         this.ipAddressHelper = Objects.requireNonNull(ipAddressHelper);
         this.sourceIdGenerator = Objects.requireNonNull(sourceIdGenerator);
+        this.jsonMerger = Objects.requireNonNull(jsonMerger);
         this.mapper = Objects.requireNonNull(mapper);
     }
 
@@ -123,8 +129,7 @@ public class Ortb2ImplicitParametersResolver {
         final Source source = bidRequest.getSource();
         final Source populatedSource = populateSource(source);
 
-        final List<Imp> imps = bidRequest.getImp();
-        final List<Imp> populatedImps = populateImps(imps, httpRequest);
+        final List<Imp> populatedImps = populateImps(bidRequest, httpRequest);
 
         final Integer at = bidRequest.getAt();
         final Integer resolvedAt = resolveAt(at);
@@ -136,6 +141,7 @@ public class Ortb2ImplicitParametersResolver {
         final Long resolvedTmax = resolveTmax(tmax, timeoutResolver);
 
         final ExtRequest ext = bidRequest.getExt();
+        final List<Imp> imps = bidRequest.getImp();
         final ExtRequest populatedExt = populateRequestExt(
                 ext, bidRequest, ObjectUtils.defaultIfNull(populatedImps, imps), endpoint);
 
@@ -319,7 +325,7 @@ public class Ortb2ImplicitParametersResolver {
             return null;
         }
 
-        final Integer atts = getIfNotNull(device.getExt(), ExtDevice::getAtts);
+        final Integer atts = ObjectUtil.getIfNotNull(device.getExt(), ExtDevice::getAtts);
         if (atts == null) {
             return null;
         }
@@ -354,7 +360,7 @@ public class Ortb2ImplicitParametersResolver {
 
         final ExtSite siteExt = site != null ? site.getExt() : null;
         final ExtSite updatedSiteExt = siteExt == null || siteExt.getAmp() == null
-                ? ExtSite.of(0, getIfNotNull(siteExt, ExtSite::getData))
+                ? ExtSite.of(0, ObjectUtil.getIfNotNull(siteExt, ExtSite::getData))
                 : null;
 
         if (ObjectUtils.anyNotNull(updatedPage, updatedDomain, updatedPublisher, updatedSiteExt)) {
@@ -414,28 +420,49 @@ public class Ortb2ImplicitParametersResolver {
     }
 
     /**
-     * - Updates imps with security 1, when secured request was received and imp security was not defined.
+     * - Updates imps with security and bidderparams.
      * - Moves bidder parameters from imp.ext._bidder_ to imp.ext.prebid.bidder._bidder_
      */
-    private List<Imp> populateImps(List<Imp> imps, HttpRequestContext httpRequest) {
+    private List<Imp> populateImps(BidRequest bidRequest, HttpRequestContext httpRequest) {
+        final List<Imp> imps = bidRequest.getImp();
         if (CollectionUtils.isEmpty(imps)) {
             return null;
         }
 
         final Integer secureFromRequest = paramsExtractor.secureFrom(httpRequest);
+        final ObjectNode globalBidderParams = extractGlobalBidderParams(bidRequest);
 
-        if (!shouldModifyImps(imps, secureFromRequest)) {
+        if (!shouldModifyImps(imps, secureFromRequest, globalBidderParams)) {
             return imps;
         }
 
         return imps.stream()
-                .map(imp -> populateImp(imp, secureFromRequest))
+                .map(imp -> populateImp(imp, secureFromRequest, globalBidderParams))
                 .collect(Collectors.toList());
     }
 
-    private boolean shouldModifyImps(List<Imp> imps, Integer secureFromRequest) {
+    private ObjectNode extractGlobalBidderParams(BidRequest bidRequest) {
+        final ExtRequest extRequest = bidRequest.getExt();
+        final ExtRequestPrebid extBidPrebid = extRequest != null ? extRequest.getPrebid() : null;
+        final ObjectNode bidderParams = extBidPrebid != null ? extBidPrebid.getBidderparams() : null;
+
+        return isObjectNode(bidderParams)
+                ? removeNonBidderFields(bidderParams)
+                : mapper.mapper().createObjectNode();
+    }
+
+    private static ObjectNode removeNonBidderFields(ObjectNode node) {
+        for (String field : IMP_EXT_NON_BIDDER_FIELDS) {
+            node.remove(field);
+        }
+
+        return node;
+    }
+
+    private boolean shouldModifyImps(List<Imp> imps, Integer secureFromRequest, ObjectNode globalBidderParams) {
         return imps.stream()
-                .anyMatch(imp -> shouldSetImpSecure(imp, secureFromRequest) || shouldMoveBidderParams(imp));
+                .anyMatch(imp -> shouldSetImpSecure(imp, secureFromRequest) || shouldMoveBidderParams(imp)
+                        || !globalBidderParams.isEmpty());
     }
 
     private boolean shouldSetImpSecure(Imp imp, Integer secureFromRequest) {
@@ -444,39 +471,61 @@ public class Ortb2ImplicitParametersResolver {
 
     private boolean shouldMoveBidderParams(Imp imp) {
         return imp.getExt() != null
-                && StreamUtil.asStream(imp.getExt().fieldNames()).anyMatch(this::isImpExtBidderField);
+                && StreamUtil.asStream(imp.getExt().fieldNames())
+                .anyMatch(Ortb2ImplicitParametersResolver::isImpExtBidderField);
     }
 
-    private boolean isImpExtBidderField(String field) {
+    public static boolean isImpExtBidderField(String field) {
         return !IMP_EXT_NON_BIDDER_FIELDS.contains(field);
     }
 
-    private Imp populateImp(Imp imp, Integer secureFromRequest) {
+    private Imp populateImp(Imp imp, Integer secureFromRequest, ObjectNode globalBidderParams) {
         final boolean shouldSetSecure = shouldSetImpSecure(imp, secureFromRequest);
         final boolean shouldMoveBidderParams = shouldMoveBidderParams(imp);
+        final boolean shouldUpdateImpExt = shouldMoveBidderParams || !globalBidderParams.isEmpty();
 
-        if (shouldSetSecure || shouldMoveBidderParams) {
+        if (shouldSetSecure || shouldUpdateImpExt) {
             final ObjectNode impExt = imp.getExt();
 
             return imp.toBuilder()
                     .secure(shouldSetSecure ? Integer.valueOf(1) : imp.getSecure())
-                    .ext(shouldMoveBidderParams ? populateImpExt(impExt) : impExt)
+                    .ext(shouldUpdateImpExt
+                            ? populateImpExt(impExt, globalBidderParams, shouldMoveBidderParams)
+                            : impExt)
                     .build();
         }
 
         return imp;
     }
 
-    private ObjectNode populateImpExt(ObjectNode impExt) {
-        final ObjectNode modifiedExt = impExt.deepCopy();
+    private ObjectNode populateImpExt(ObjectNode impExt,
+                                      ObjectNode globalBidderParams,
+                                      boolean shouldMoveBidderParams) {
+        final ObjectNode impExtCopy = prepareValidImpExtCopy(impExt);
+        final ObjectNode normalizedExt = shouldMoveBidderParams ? moveBidderParamsToPrebid(impExtCopy) : impExtCopy;
+        if (!globalBidderParams.isEmpty()) {
+            mergeGlobalBidderParamsToImp(normalizedExt, globalBidderParams);
+        }
 
-        final ObjectNode modifiedExtPrebid = getOrCreateChildObjectNode(modifiedExt, PREBID_EXT);
-        modifiedExt.replace(PREBID_EXT, modifiedExtPrebid);
+        return normalizedExt;
+    }
+
+    private ObjectNode prepareValidImpExtCopy(ObjectNode impExt) {
+        final ObjectNode copiedImpExt = impExt != null ? impExt.deepCopy() : mapper.mapper().createObjectNode();
+
+        final ObjectNode modifiedExtPrebid = getOrCreateChildObjectNode(copiedImpExt, PREBID_EXT);
+        copiedImpExt.replace(PREBID_EXT, modifiedExtPrebid);
         final ObjectNode modifiedExtPrebidBidder = getOrCreateChildObjectNode(modifiedExtPrebid, BIDDER_EXT);
         modifiedExtPrebid.replace(BIDDER_EXT, modifiedExtPrebidBidder);
 
-        final Set<String> bidderFields = StreamUtil.asStream(modifiedExt.fieldNames())
-                .filter(this::isImpExtBidderField)
+        return copiedImpExt;
+    }
+
+    private ObjectNode moveBidderParamsToPrebid(ObjectNode impExt) {
+        final ObjectNode modifiedExtPrebidBidder = (ObjectNode) impExt.get(PREBID_EXT).get(BIDDER_EXT);
+
+        final Set<String> bidderFields = StreamUtil.asStream(impExt.fieldNames())
+                .filter(Ortb2ImplicitParametersResolver::isImpExtBidderField)
                 .collect(Collectors.toSet());
 
         for (final String currentBidderField : bidderFields) {
@@ -484,13 +533,12 @@ public class Ortb2ImplicitParametersResolver {
                     getOrCreateChildObjectNode(modifiedExtPrebidBidder, currentBidderField);
             modifiedExtPrebidBidder.replace(currentBidderField, modifiedExtPrebidBidderCurrentBidder);
 
-            final JsonNode extCurrentBidder = modifiedExt.remove(currentBidderField);
+            final JsonNode extCurrentBidder = impExt.remove(currentBidderField);
             if (isObjectNode(extCurrentBidder)) {
                 modifiedExtPrebidBidderCurrentBidder.setAll((ObjectNode) extCurrentBidder);
             }
         }
-
-        return modifiedExt;
+        return impExt;
     }
 
     private static ObjectNode getOrCreateChildObjectNode(ObjectNode parentNode, String fieldName) {
@@ -501,6 +549,25 @@ public class Ortb2ImplicitParametersResolver {
 
     private static boolean isObjectNode(JsonNode node) {
         return node != null && node.isObject();
+    }
+
+    private void mergeGlobalBidderParamsToImp(ObjectNode impExt, ObjectNode requestBidderParams) {
+        final ObjectNode modifiedExtPrebid = (ObjectNode) impExt.get(PREBID_EXT);
+        final ObjectNode modifiedExtBidder = (ObjectNode) modifiedExtPrebid.get(BIDDER_EXT);
+
+        StreamUtil.asStream(requestBidderParams.fields())
+                .forEach(bidderToParam -> mergeBidderParams(
+                        Tuple2.of(bidderToParam.getKey(), bidderToParam.getValue()), modifiedExtBidder));
+    }
+
+    private void mergeBidderParams(Tuple2<String, JsonNode> bidderToParam, ObjectNode extBidder) {
+        final String bidder = bidderToParam.getLeft();
+        final JsonNode impParams = extBidder.get(bidder);
+        final JsonNode requestParams = bidderToParam.getRight();
+        final JsonNode mergedParams = impParams == null
+                ? requestParams
+                : jsonMerger.merge(impParams, requestParams);
+        extBidder.set(bidder, mergedParams);
     }
 
     /**
@@ -515,7 +582,7 @@ public class Ortb2ImplicitParametersResolver {
 
         final ExtRequestTargeting updatedTargeting = targetingOrNull(prebid, imps);
         final ExtRequestPrebidCache updatedCache = cacheOrNull(prebid);
-        final ExtRequestPrebidChannel updatedChannel = channelOrNull(prebid, bidRequest);
+        final ExtRequestPrebidChannel updatedChannel = channelOrNull(prebid, bidRequest, endpoint);
         final ExtRequestPrebidPbs updatedPbs = pbsOrNull(bidRequest, endpoint);
 
         if (updatedTargeting != null || updatedCache != null || updatedChannel != null || updatedPbs != null) {
@@ -525,13 +592,13 @@ public class Ortb2ImplicitParametersResolver {
 
             final ExtRequest updatedExt = ExtRequest.of(prebidBuilder
                     .targeting(ObjectUtils.defaultIfNull(updatedTargeting,
-                            getIfNotNull(prebid, ExtRequestPrebid::getTargeting)))
+                            ObjectUtil.getIfNotNull(prebid, ExtRequestPrebid::getTargeting)))
                     .cache(ObjectUtils.defaultIfNull(updatedCache,
-                            getIfNotNull(prebid, ExtRequestPrebid::getCache)))
+                            ObjectUtil.getIfNotNull(prebid, ExtRequestPrebid::getCache)))
                     .channel(ObjectUtils.defaultIfNull(updatedChannel,
-                            getIfNotNull(prebid, ExtRequestPrebid::getChannel)))
+                            ObjectUtil.getIfNotNull(prebid, ExtRequestPrebid::getChannel)))
                     .pbs(ObjectUtils.defaultIfNull(updatedPbs,
-                            getIfNotNull(prebid, ExtRequestPrebid::getPbs)))
+                            ObjectUtil.getIfNotNull(prebid, ExtRequestPrebid::getPbs)))
                     .build());
             updatedExt.addProperties(ext.getProperties());
 
@@ -565,8 +632,8 @@ public class Ortb2ImplicitParametersResolver {
      * Returns populated {@link ExtRequestPrebidPbs} or null if no changes were applied.
      */
     private ExtRequestPrebidPbs pbsOrNull(BidRequest bidRequest, String endpoint) {
-        final String existingEndpoint = getIfNotNull(getIfNotNull(bidRequest.getExt().getPrebid(),
-                        ExtRequestPrebid::getPbs),
+        final String existingEndpoint = ObjectUtil.getIfNotNull(
+                ObjectUtil.getIfNotNull(bidRequest.getExt().getPrebid(), ExtRequestPrebid::getPbs),
                 ExtRequestPrebidPbs::getEndpoint);
 
         if (StringUtils.isNotBlank(existingEndpoint)) {
@@ -692,8 +759,8 @@ public class Ortb2ImplicitParametersResolver {
         final Boolean cacheWinningOnly = cache != null ? cache.getWinningonly() : null;
         if (cacheWinningOnly == null && shouldCacheOnlyWinningBids) {
             return ExtRequestPrebidCache.of(
-                    getIfNotNull(cache, ExtRequestPrebidCache::getBids),
-                    getIfNotNull(cache, ExtRequestPrebidCache::getVastxml),
+                    ObjectUtil.getIfNotNull(cache, ExtRequestPrebidCache::getBids),
+                    ObjectUtil.getIfNotNull(cache, ExtRequestPrebidCache::getVastxml),
                     true);
         }
         return null;
@@ -702,16 +769,21 @@ public class Ortb2ImplicitParametersResolver {
     /**
      * Returns populated {@link ExtRequestPrebidChannel} or null if no changes were applied.
      */
-    private ExtRequestPrebidChannel channelOrNull(ExtRequestPrebid prebid, BidRequest bidRequest) {
-        final String existingChannelName = getIfNotNull(getIfNotNull(prebid,
-                        ExtRequestPrebid::getChannel),
-                ExtRequestPrebidChannel::getName);
+    private ExtRequestPrebidChannel channelOrNull(ExtRequestPrebid prebid, BidRequest bidRequest, String endpoint) {
+        final ExtRequestPrebidChannel channel = ObjectUtil.getIfNotNull(prebid, ExtRequestPrebid::getChannel);
+        final String channelName = ObjectUtil.getIfNotNull(channel, ExtRequestPrebidChannel::getName);
 
-        if (StringUtils.isNotBlank(existingChannelName)) {
-            return null;
+        if (channel != null && StringUtils.isBlank(channelName)) {
+            throw new PreBidException("ext.prebid.channel.name can't be empty");
         }
 
-        if (bidRequest.getApp() != null) {
+        return channel == null ? populateChannel(bidRequest, endpoint) : null;
+    }
+
+    private static ExtRequestPrebidChannel populateChannel(BidRequest bidRequest, String endpoint) {
+        if (StringUtils.equals(Endpoint.openrtb2_amp.value(), endpoint)) {
+            return ExtRequestPrebidChannel.of(AMP_CHANNEL);
+        } else if (bidRequest.getApp() != null) {
             return ExtRequestPrebidChannel.of(APP_CHANNEL);
         } else if (bidRequest.getSite() != null) {
             return ExtRequestPrebidChannel.of(WEB_CHANNEL);
@@ -745,9 +817,5 @@ public class Ortb2ImplicitParametersResolver {
     private static Long resolveTmax(Long requestTimeout, TimeoutResolver timeoutResolver) {
         final long timeout = timeoutResolver.resolve(requestTimeout);
         return !Objects.equals(requestTimeout, timeout) ? timeout : null;
-    }
-
-    private static <T, R> R getIfNotNull(T target, Function<T, R> getter) {
-        return target != null ? getter.apply(target) : null;
     }
 }
